<resources>
    <string name="app_name">Zona Azul</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Tela Inicial-->
    <string name="btn_login_main">LOGIN</string>
    <string name="btn_cadastrar_main">CADASTRAR</string>

    <!-- Titulos-->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Inicio</string>
    <string name="title_sair">Sair</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_login">Acessar Minha Conta</string>
    <string name="title_cadastro">Cadastrar Usuario</string>

    <!--tela login-->
    <string name="hint_email_login">E-mail</string>
    <string name="hint_senha_login">Senha</string>
    <string name="btn_entrar">Entrar</string>

    <!-- tela cadastro-->
    <string name="hint_Nome_cadastro">Inserir Nome Completo</string>
    <string name="hint_email_cadastro">Inserir E-mail</string>
    <string name="hint_senha_cadastro">Insirir Senha</string>
    <string name="btn_confirmar_cadastrar">Confirmar Cadastro</string>
    <string name="textView_Fiscal_in_cadastro">Fiscal</string>
    <string name="textView_Condutor_in_cadastro">Condutor</string>
    <string name="title_activity_fiscal_">Fiscal_Activity</string>


    <!--tela adapter_Requisicoes -->
    <string name="tVAdapterNome">Maelson_condutor</string>
    <string name="tVAdapterDistancia">Aproximadamente: 0 Km</string>
    <string name="title_activity_corrida">Confirmar Corrida</string>


</resources>
